Fix styles on mobile

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -30,7 +30,7 @@ h1 {
 
 .header {
   display: flex;
-  padding: 0 30px;
+  padding: 0 20px;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
@@ -62,6 +62,10 @@ h1 {
 
     &:hover {
       background: $light-gray;
+    }
+
+    @media only screen and (max-width: 600px) {
+      display: none;
     }
   }
 }
